--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,42 +10,34 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
-    container: ghcr.io/autowarefoundation/autoware-universe:latest
+    runs-on: ${{ matrix.os }}
+    container:
+      image: osrf/ros:humble-desktop
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
+      fail-fast: false
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Remove exec_depend
-        uses: autowarefoundation/autoware-github-actions/remove-exec-depend@v1
-
-      - name: Get self packages
-        id: get-self-packages
-        uses: autowarefoundation/autoware-github-actions/get-self-packages@v1
-
-      - name: Build
-        if: ${{ steps.get-self-packages.outputs.self-packages != '' }}
-        uses: autowarefoundation/autoware-github-actions/colcon-build@v1
+      - name: Install deps
+        run: sudo apt-get update && sudo apt-get install -y wget python3-vcstool python3-colcon-coveragepy-result libfl-dev
+      - name: build and test
+        uses: ros-tooling/action-ros-ci@0.2.6
         with:
-          rosdistro: humble
-          target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
-          build-depends-repos: third_parties.repos
-
-      - name: Test
-        if: ${{ steps.get-self-packages.outputs.self-packages != '' }}
-        id: test
-        uses: autowarefoundation/autoware-github-actions/colcon-test@v1
+          package-name: obstacle_detector
+          target-ros2-distro: humble
+          colcon-defaults: |
+            {
+              "test": {
+                "parallel-workers" : 1
+              }
+            }
+          colcon-mixin-name: coverage-gcc
+          colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
+      - name: Codecov
+        uses: codecov/codecov-action@v2.0.2
         with:
-          rosdistro: humble
-          target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
-
-          # build-depends-repos: build_depends.repos
-
-      - name: Upload coverage to CodeCov
-        if: ${{ steps.test.outputs.coverage-report-files != '' }}
-        uses: codecov/codecov-action@v2
-        with:
-          files: ${{ steps.test.outputs.coverage-report-files }}
+          files: ros_ws/lcov/total_coverage.info
+          flags: unittests
+          name: codecov-umbrella
+          # yml: ./codecov.yml
           fail_ci_if_error: false
-          verbose: true
-          flags: total
