--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,11 +20,14 @@ jobs:
     steps:
       - name: Install deps
         run: sudo apt-get update && sudo apt-get install -y wget python3-vcstool python3-colcon-coveragepy-result libfl-dev
+      - name: Create custom repos
+        run: wget -O /tmp/all.repos https://raw.githubusercontent.com/CoreSenseEU/ROS2_seminar/main/third_parties.repos
       - name: build and test
         uses: ros-tooling/action-ros-ci@0.2.6
         with:
           package-name: obstacle_detector
           target-ros2-distro: humble
+          vcs-repo-file-url: /tmp/all.repos
           colcon-defaults: |
             {
               "test": {
