--- a/obstacle_detector/package.xml
+++ b/obstacle_detector/package.xml
@@ -13,6 +13,7 @@
   <depend>rclcpp_components</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
